--- a/download_app.css
+++ b/download_app.css
@@ -85,7 +85,7 @@
 }
 
 .main_caption{
-    font-family:sen;
+    font-family: Maven Pro, sans-serif;
     font-size:20px;
     margin-bottom:42px;
     max-width:420px;
