Heartland Town Centre 1.0  /download_app.css

--- a/download_app.css
+++ b/download_app.css
@@ -148,7 +148,7 @@
 }
 
 .newsletter_submit_btn:hover, .newsletter_submit_btn:focus{
-    background: #17BCA8;
+    background: #000;
     outline:0;
 }
 
