Heartland Town Centre 1.0  /download_app.css

--- a/download_app.css
+++ b/download_app.css
@@ -136,7 +136,7 @@
 }
 
 .newsletter_submit_btn{
-    background:#000;
+    background:#9B9B9B;
     border: none;
     width: 118px;
     height: 34px;
