--- a/download_app.css
+++ b/download_app.css
@@ -99,7 +99,7 @@
 
 
 .newsletter_box{
-    border:1px solid #19DDC5;
+    border:1px solid #000;
     padding:28px;
     max-width:420px;
     background: #E8FBF9;
