--- a/application.css
+++ b/application.css
@@ -32,7 +32,9 @@ h2 {
 }
 
 .error_page_img img{
-    width:400px;
+    width: 400px;
+    display: block;
+    margin: 0 auto;
 }
 .right_block img{
     height:188px;
