--- a/application.css
+++ b/application.css
@@ -14,6 +14,11 @@ p, ol, ul, td{
 .maven{
     font-family: Maven pro, sans-serif;
 }
+
+.width_100{
+    width:100%;    
+}
+
 .hidden_now{
     display:none;
 }
