--- a/application.css
+++ b/application.css
@@ -926,7 +926,9 @@ textarea:focus, input:focus{
 
 
  @media (max-width: 767px) {
-     
+    #contest_form{
+        padding: 0 15px;
+    }
     .header_container{
         height:90px;
     }
