Heartland Town Centre 1.1  /application.css

--- a/application.css
+++ b/application.css
@@ -1078,6 +1078,9 @@ textarea:focus, input:focus{
     
     h1{
         font-size:25px;
+        width: 95%;
+        margin-left: auto;
+        margin-right: auto;
     }
     
     .mobile_menu_btn{
