--- a/application.css
+++ b/application.css
@@ -73,6 +73,19 @@ a:hover{
     
 }
 
+
+#google_map{
+    background: black;
+    color: white;
+    text-transform: uppercase;
+    border: none;
+    width: 100%;
+    height: 28px;
+    text-align: center;
+    line-height: 28px;
+    font-size: 14px;
+    font-weight: bold;
+}
 .accessible{
     display:none;
 }
