Heartland Town Centre 1.1  /application.css

--- a/application.css
+++ b/application.css
@@ -85,6 +85,8 @@ a:hover{
     line-height: 28px;
     font-size: 14px;
     font-weight: bold;
+    float:left;
+    font-color:#fff
 }
 .accessible{
     display:none;
