Heartland Town Centre 1.1  /application.css

--- a/application.css
+++ b/application.css
@@ -86,7 +86,7 @@ a:hover{
     font-size: 14px;
     font-weight: bold;
     float:left;
-    font-color:#fff
+    color:#fff
 }
 .accessible{
     display:none;
