Heartland Town Centre 1.1  /application.css

--- a/application.css
+++ b/application.css
@@ -75,7 +75,7 @@ a:hover{
 
 
 #google_map{
-    background: black;
+    background: rgb(107, 181, 104);;
     text-transform: uppercase;
     border: none;
     width: 150px;
