--- a/application.css
+++ b/application.css
@@ -88,7 +88,7 @@ a:hover{
     display: block;
     margin-right: 20px;
     margin-top: 10px;
-    float-right
+    float:right
 }
 .accessible{
     display:none;
