Heartland Town Centre 1.1  /application.css

--- a/application.css
+++ b/application.css
@@ -943,6 +943,9 @@ textarea:focus, input:focus{
 
 
  @media (max-width: 768px) {
+     #google_map{
+         float:none;
+     }
     #contest_form{
         padding: 0 15px;
     }
