Heartland Town Centre 1.1  /application.css

--- a/application.css
+++ b/application.css
@@ -714,6 +714,10 @@ textarea:focus, input:focus{
     margin-top:0px;
     
 }
+
+#cat_name{
+    display:none;
+}
 .content_table a, h1 a{
     color:black !important;
 }
