Heartland Town Centre 1.6  /application.css

--- a/application.css
+++ b/application.css
@@ -581,7 +581,7 @@ textarea:focus, input:focus{
 }
 
 .main_content{
-    width:75%;
+    /*width:75%;*/
     display:inline-block;
     z-index:1;
 }
