--- a/application.css
+++ b/application.css
@@ -997,6 +997,9 @@ textarea:focus, input:focus{
 
 
  @media (max-width: 768px) {
+     .show_phone{
+        display:inline-block;
+    }
      #google_map{
          float:none;
      }
