Heartland Town Centre 1.6  /application.css

--- a/application.css
+++ b/application.css
@@ -584,7 +584,7 @@ textarea:focus, input:focus{
 }
 
 .main_content{
-    /*width:75%;*/
+    width:100%;
     display:inline-block;
     z-index:1;
 }
