Heartland Town Centre 1.6  /application.css

--- a/application.css
+++ b/application.css
@@ -47,7 +47,8 @@ p, ol, ul, td{
     width:  40%; 
 }
 .grid-item--height2 { 
-    min-height: 640px; 
+    min-height: 768px; 
+    height: 768px;
 }
 .grid-item img {
     display: block;
