--- a/application.css
+++ b/application.css
@@ -1003,6 +1003,38 @@ textarea:focus, input:focus{
     .show_phone{
         display:inline-block;
     }
+    
+    .grid-sizer, .grid-item { 
+        width: 50%; 
+    } 
+    .grid-item {
+        min-height: 384px;
+        height: 384px;
+    }
+    .grid-item img {
+        width: 100%;
+        height: 100%;
+    }
+    .grid-item--width2 { 
+        width:  100%;
+    }
+    .grid-item--height2 { 
+        min-height: 768px; 
+        height: 768px;
+    }
+    .ih-item.circle.effect19 .info {
+        opacity: 1;
+        transform: scale(1);
+        border-radius: 0;
+        background: none;
+        background-image: -webkit-linear-gradient(90deg,rgba(0,0,0,.7),transparent)!important;
+    }
+    .ih-item.circle.effect19 .info .content h3,
+    .ih-item.circle.effect19 .info .content h3:after {
+        visibility: visible;
+        opacity: 1;
+    }
+    
      #google_map{
          float:none;
      }
