Heartland Town Centre 1.6  /application.css

--- a/application.css
+++ b/application.css
@@ -1001,7 +1001,7 @@ textarea:focus, input:focus{
         display: none !important;
     }
     .show_phone{
-        display:inline-block;
+        display:block;
     }
     
     .grid-sizer, .grid-item { 
