--- a/application.css
+++ b/application.css
@@ -18,7 +18,10 @@ p, ol, ul, td{
 .width_100{
     width:100%;    
 }
-
+.image {
+    max-width: 100%
+    max-height:100%;
+}
 .show_phone{
     display:none;
 }
