--- a/application.css
+++ b/application.css
@@ -22,6 +22,9 @@ p, ol, ul, td{
     max-width: 100%;
     max-height:100%;
 }
+.no_padding {
+    padding: 0;
+}
 .show_phone{
     display:none;
 }
