Heartland Town Centre 1.6  /application.css

--- a/application.css
+++ b/application.css
@@ -702,7 +702,9 @@ textarea:focus, input:focus{
     height:18px;    
     margin: 0 10px;
 }
-
+#blog_container {
+    
+}
 
 
 /*STORE DIRECTORY CSS*/
