--- a/application.css
+++ b/application.css
@@ -1162,7 +1162,7 @@ textarea:focus, input:focus {
 }
 
 .tab_title_content {
-    a, p {
+    a, span {
         color: black !important;
         margin-right: 15px;
         line-height: 39px;
