--- a/application.css
+++ b/application.css
@@ -1170,6 +1170,9 @@ textarea:focus, input:focus {
             cursor: pointer;
         }
     }
+    span {
+        white-space: nowrap;
+    }
     background: #f3f3f3;
     color: black !important;
     border: 1px solid #e2e2e2;
