Heartland Town Centre 1.7  /application.css

--- a/application.css
+++ b/application.css
@@ -1168,6 +1168,7 @@ textarea:focus, input:focus {
         line-height: 39px;
         &:hover {
             cursor: pointer;
+            text-decoration: underline;
         }
     }
     span {
