Heartland Town Centre 1.7  /application.css

--- a/application.css
+++ b/application.css
@@ -156,7 +156,7 @@ a:hover {
   line-height: 28px;
   font-size: 14px;
   font-weight: bold;
-  color: #fff !important;
+  color: #000 !important;
   display: block;
   margin-right: 20px;
   margin-top: 10px;
